--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="container">
                     <div class="header__first-part-inner">
                         <div class="header-schedule">
-                            <img src="/images/header-clock-sign.webp" alt="time-sign" class="header-schedule__img">
+                            <img src="images/header-clock-sign.webp" alt="time-sign" class="header-schedule__img">
                             <p class="header-schedule__text">MON-SAT: 6:00 AM - 10:00 PM</p>
                             <p class="header-schedule__extra-text">SUN CLOSED</p>
                         </div>
@@ -21,22 +21,22 @@
                             <ul class="header-socials__list">
                                 <li class="header-socials__item">
                                     <a href="#" class="header-social__link">
-                                        <img src="/images/facebook.webp" width="45px" alt="facebook-sign" class="header-social__img">
+                                        <img src="images/facebook.webp" width="45px" alt="facebook-sign" class="header-social__img">
                                     </a>
                                 </li>
                                 <li class="header-socials__item">
                                     <a href="#" class="header-social__link">
-                                        <img src="/images/twitter.webp" width="45px" alt="twitter-sign" class="header-social__img">
+                                        <img src="images/twitter.webp" width="45px" alt="twitter-sign" class="header-social__img">
                                     </a>
                                 </li>
                                 <li class="header-socials__item">
                                     <a href="#" class="header-social__link">
-                                        <img src="/images/linkedin.webp" width="30px" alt="linkedin-sign" class="header-social__img">
+                                        <img src="images/linkedin.webp" width="30px" alt="linkedin-sign" class="header-social__img">
                                     </a>
                                 </li>
                                 <li class="header-socials__item">
                                     <a href="#" class="header-social__link">
-                                        <img src="/images/google.webp" width="30px" alt="google-sign" class="header-social__img">
+                                        <img src="images/google.webp" width="30px" alt="google-sign" class="header-social__img">
                                     </a>
                                 </li>
                             </ul>
@@ -100,7 +100,7 @@
                     </h2>
                     <ul class="services__list">
                         <li class="services__item">
-                            <img src="/images/service-strategy-planning.png" alt="service-img" class="services__img">
+                            <img src="images/service-strategy-planning.png" alt="service-img" class="services__img">
                             <h4 class="services__subtitle">Strategy Planning</h4>
                             <p class="services__text">
                                 There are many variations of passages of lorem ipsum available but the new
@@ -108,7 +108,7 @@
                             </p>
                         </li>
                         <li class="services__item">
-                            <img src="/images/service-insurance-service.png" alt="service-img" class="services__img">
+                            <img src="images/service-insurance-service.png" alt="service-img" class="services__img">
                             <h4 class="services__subtitle">Insurance Service</h4>
                             <p class="services__text">
                                 There are many variations of passages of lorem ipsum available but the new
@@ -116,7 +116,7 @@
                             </p>
                         </li>
                         <li class="services__item">
-                            <img src="/images/service-audit-&-evalution.png" alt="service-img" class="services__img">
+                            <img src="images/service-audit-&-evalution.png" alt="service-img" class="services__img">
                             <h4 class="services__subtitle">Audit & Evalution</h4>
                             <p class="services__text">
                                 There are many variations of passages of lorem ipsum available but the new
@@ -129,7 +129,7 @@
             <section class="section-about-us">
                 <div class="container">
                     <div class="section-about-us__inner">
-                        <img src="/images/about-us-img.png" alt="photo-with-our-team" class="about-us__img">
+                        <img src="images/about-us-img.png" alt="photo-with-our-team" class="about-us__img">
                         <div class="about-us__content">
                             <p class="about-us__small-text small-text">
                                 <span class="about-us-sign text-sign"></span>
@@ -163,7 +163,7 @@
                     </h2>
                     <ul class="study__list">
                         <li class="study__item">
-                            <img src="/images/study-1.png" alt="study-project" class="study__img">
+                            <img src="images/study-1.png" alt="study-project" class="study__img">
                             <p class="study__subtitle">
                                 <span class="study-subtitle-sign text-sign"></span>
                                 Strategy planning
@@ -173,7 +173,7 @@
                             </p>
                         </li>
                         <li class="study__item">
-                            <img src="/images/study-2.png" alt="study-project" class="study__img">
+                            <img src="images/study-2.png" alt="study-project" class="study__img">
                             <p class="study__subtitle">
                                 <span class="study-subtitle-sign text-sign"></span>
                                 Strategy planning
@@ -183,7 +183,7 @@
                             </p>
                         </li>
                         <li class="study__item">
-                            <img src="/images/study-3.png" alt="study-project" class="study__img">
+                            <img src="images/study-3.png" alt="study-project" class="study__img">
                             <p class="study__subtitle">
                                 <span class="study-subtitle-sign text-sign"></span>
                                 Strategy planning
@@ -193,7 +193,7 @@
                             </p>
                         </li>
                         <li class="study__item">
-                            <img src="/images/study-4.png" alt="study-project" class="study__img">
+                            <img src="images/study-4.png" alt="study-project" class="study__img">
                             <p class="study__subtitle">
                                 <span class="study-subtitle-sign text-sign"></span>
                                 Strategy planning
@@ -214,7 +214,7 @@
                         por incididunt ut labore et dolore mas.
                     </blockquote>
                     <cite class="review__cite">
-                        <img src="/images/review-man.jpg" alt="Jessya Inn" class="review__img">
+                        <img src="images/review-man.jpg" alt="Jessya Inn" class="review__img">
                         <div class="author-info">
                             <h4 class="review__author">Jessya Inn</h4>
                             <p class="review__descr">Chief Photographer</p>
@@ -251,7 +251,7 @@
                     </h2>
                     <ul class="members__list">
                         <li class="members__item">
-                            <img src="/images/team-member-1.png" alt="member-1" class="member__img">
+                            <img src="images/team-member-1.png" alt="member-1" class="member__img">
                             <p class="member-name-surname">Ethan Welch</p>
                             <p class="member__small-text small-text">
                                 <span class="member-sign text-sign"></span>
@@ -259,7 +259,7 @@
                             </p>
                         </li>
                         <li class="members__item">
-                            <img src="/images/team-member-2.png" alt="member-2" class="member__img">
+                            <img src="images/team-member-2.png" alt="member-2" class="member__img">
                             <p class="member-name-surname">Ethan Welch</p>
                             <p class="member__small-text small-text">
                                 <span class="member-sign text-sign"></span>
@@ -267,7 +267,7 @@
                             </p>
                         </li>
                         <li class="members__item">
-                            <img src="/images/team-member-3.png" alt="member-3" class="member__img">
+                            <img src="images/team-member-3.png" alt="member-3" class="member__img">
                             <p class="member-name-surname">Ethan Welch</p>
                             <p class="member__small-text small-text">
                                 <span class="member-sign text-sign"></span>
